miniextendr-macros/tests/ui/impl_unknown_option.stderr
error: unknown option: bogus
 --> tests/ui/impl_unknown_option.rs:7:20
  |
7 | #[miniextendr(env, bogus = "x")]
  |                    ^^^^^
